force-app/main/default/objects/Page__c/Page__c.object-meta.xml
<CustomObject>
    <description>Used to create portal pages in the programs Salesforce community</description>
    <label>Page</label>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>