force-app/main/default/objects/Page__c/fields/Access_Required__c.field-meta.xml
<CustomField>
    <fullName>Access_Required__c</fullName>
    <label>Access Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>