force-app/main/default/objects/Page__c/fields/Disable_Page__c.field-meta.xml
<CustomField>
    <fullName>Disable_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Page</label>
    <type>Checkbox</type>
</CustomField>