force-app/main/default/objects/Page__c/fields/External_Link_Out__c.field-meta.xml
<CustomField>
    <fullName>External_Link_Out__c</fullName>
    <label>External Link Out</label>
    <type>Url</type>
</CustomField>