force-app/main/default/objects/Page__c/fields/HTML_Content__c.field-meta.xml
<CustomField>
    <fullName>HTML_Content__c</fullName>
    <label>HTML Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>