force-app/main/default/objects/Page__c/fields/Menu_Order__c.field-meta.xml
<CustomField>
    <fullName>Menu_Order__c</fullName>
    <label>Menu Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>