force-app/main/default/objects/Page__c/fields/Menu_Title__c.field-meta.xml
<CustomField>
    <fullName>Menu_Title__c</fullName>
    <label>Menu Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>