force-app/main/default/objects/Page__c/fields/Page_Template__c.field-meta.xml
<CustomField>
    <fullName>Page_Template__c</fullName>
    <label>Page Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>portalPage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>