force-app/main/default/objects/Page__c/fields/Page_URL_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_URL_Name__c</fullName>
    <label>Page URL Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>