force-app/main/default/objects/Page__c/fields/Parent_Page__c.field-meta.xml
<CustomField>
    <fullName>Parent_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Page</label>
    <referenceTo>Page__c</referenceTo>
    <relationshipLabel>Pages</relationshipLabel>
    <relationshipName>Pages</relationshipName>
    <type>Lookup</type>
</CustomField>