force-app/main/default/objects/Page__c/fields/Top_Level_Menu__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Menu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Level Menu</label>
    <type>Checkbox</type>
</CustomField>