force-app/main/default/objects/Page__c/fields/Top_Level_Menu_Item_Hidden_When_Empty__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Menu_Item_Hidden_When_Empty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Level Menu Item Hidden When Empty</label>
    <type>Checkbox</type>
</CustomField>