force-app/main/default/objects/Page__c/fields/Visualforce__c.field-meta.xml
<CustomField>
    <fullName>Visualforce__c</fullName>
    <label>Visualforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>