force-app/main/default/objects/Page__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Page_Template__c</columns>
    <columns>Page_URL_Name__c</columns>
    <columns>Parent_Page__c</columns>
    <columns>Site__c</columns>
    <columns>Menu_Title__c</columns>
    <columns>Top_Level_Menu__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>