force-app/main/default/objects/Page__c/listViews/Volunteer_Pages.listView-meta.xml
<ListView>
    <fullName>Volunteer_Pages</fullName>
    <columns>NAME</columns>
    <columns>Menu_Order__c</columns>
    <columns>Site__c</columns>
    <columns>Top_Level_Menu__c</columns>
    <columns>Visualforce__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site__c</field>
        <operation>contains</operation>
        <value>Camp Quality Volunteers</value>
    </filters>
    <label>Volunteer Portal Pages</label>
</ListView>